@@ -1,3 +1,8 @@
+2008-11-24  Ludovic Marcotte  <lmarcotte@inverse.ca>
+
+	* chrome/content/sogo-connector/addressbook/edit-list-overlay.js
+	We fallback to the messenger window if the ab window isn't available
+
 2008-11-23  Ludovic Marcotte  <lmarcotte@inverse.ca>	
 
 	* chrome/content/sogo-connector/lightning/lightning-calendar-properties-overlay.js
